# xiaozhi-esp32-servo_dog

./: idf_component.yml
main/: CMakeLists.txt  Kconfig.projbuild  idf_component.yml  main.cc
main/boards/devkit-esp32s3-st7789/: CMakeLists.txt.bak  config.h  esp32_devkit_board.cc
main/servo/: ble_servo_server.cpp  ble_servo_server.h  servo_control.cpp  servo_control.h
